# model-card-gen-hf

./: README.md  pyproject.toml
src/: generate_card.py
src/templates/: __init__.py  cognitive_computation.jinja
